# yarvis

./: .gitmodules  CMakeLists.txt  README.md
cmake/: FindGLFW.cmake
docs/protocol/: draft.01.md
yarvis-server/: CMakeLists.txt  audio_analyzer.cpp  audio_analyzer.h  constants.h  debug_window.cpp  debug_window.h  main.cpp  server.cpp  server.h  server_client_handling.cpp  yarp_constants.h
